# hummingbird

./: .gitignore  build.zig  meson.build
asset/mesh/: cube.vertex  map1.blend  map1.blend1  map1.stl  map1.vertex  monkey.blend  monkey.blend1  monkey.stl  monkey.vertex  room1.blend
asset/shader/main/: shader.frag  shader.vert
include/common/: linmath.h
include/game/: io.h
include/graphics/: graphics.h  io.h  resource.h  triangles.h  vertex.h
include/platform/: platform.h
include/platform/.ccls-cache/@@home@joey@src@flicker@include@platform/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@11.0.0@include@stdint.h.blob
include/platform/.ccls-cache/@home@joey@src@flicker@include@platform/: platform.h  platform.h.blob
include/volk/.ccls-cache/@@home@joey@dev@hummingbird@include@volk/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@include@vulkan@vk_platform.h.blob  @usr@include@vulkan@vulkan.h.blob  @usr@include@vulkan@vulkan_core.h.blob  @usr@lib@clang@12.0.1@include@__stddef_max_align_t.h.blob  @usr@lib@clang@12.0.1@include@stddef.h.blob  @usr@lib@clang@12.0.1@include@stdint.h.blob
include/volk/.ccls-cache/@home@joey@dev@hummingbird@include@volk/: volk.h.blob
script/: create_meshes.py
src/: c.zig  graphics.zig  io.zig  linmath.zig  main.zig  sound.zig  window.zig
src/common/: linmath.c
src/game/: io.c  main.c
src/graphics/: io.c
src/graphics/.ccls-cache/@@home@joey@dev@hummingbird@src@graphics/: @usr@include@alloca.h.blob  (+60 more)
src/platform/: win32.c  xcb.c
(+14 files in other folders)
